--- a/1-8/practice_1-8.css
+++ b/1-8/practice_1-8.css
@@ -20,9 +20,6 @@
 	height:400px;
 	float:left;
 }
-.main-content-center,.main-content-right{
-	float:left;
-}
 .main-step{
 	position:absolute;
 	top:0px;
@@ -30,8 +27,6 @@
 	width:50px;
 	height:20px;
 	background-color:orange;
-}
-.main-step{
 	text-align:center;
 	color:white;
 }
@@ -44,4 +39,30 @@
 }
 .main-head,.main-text{
 	padding-left:10px;
+}
+
+@media screen and (max-width:768px){
+	.main{
+		width:100%;
+		padding:36px;
+	}
+	.main-content-left,.main-content-center,.main-content-right{
+		width:225px;
+		height:300px;
+		float:none;
+	}
+	.main-step{
+		width:36px;
+		height:15px;
+	}
+	.main-content-center{
+		margin:0 21px;
+	}
+	.main-img{
+		width:93%;
+		margin:6px 6px;
+	}
+	.main-head,.main-text{
+		padding-left:6px;
+	}
 }
