--- a/1-8/practice_1-8.css
+++ b/1-8/practice_1-8.css
@@ -43,26 +43,21 @@
 
 @media screen and (max-width:768px){
 	.main{
+		margin:50px 0;
 		width:100%;
-		padding:36px;
 	}
 	.main-content-left,.main-content-center,.main-content-right{
-		width:225px;
-		height:300px;
+		width:90%;
 		float:none;
-	}
-	.main-step{
-		width:36px;
-		height:15px;
+		margin:0 auto;
 	}
 	.main-content-center{
-		margin:0 21px;
+		margin:20px auto;
 	}
-	.main-img{
-		width:93%;
-		margin:6px 6px;
+	.main-content-right{
+		margin-bottom:50px;
 	}
-	.main-head,.main-text{
-		padding-left:6px;
+	.main-content-left{
+		margin-top:50px;
 	}
 }
