--- a/task_Ⅱ/task_Ⅱ.css
+++ b/task_Ⅱ/task_Ⅱ.css
@@ -4,20 +4,27 @@
 	box-sizing:border-box;
 	color:#6c6b6b;
  }
+a{
+	text-decoration:none;
+}
 /*clearfixを追加*/
 .clearfix::after{
 	content:"";
 	display:block;
 	clear:both;
 }
+header{
+	width:100%;
+	background-color:#EC715F
+}
 .header-box{
 	width:1024px;
 	height:70px;
+	margin:0 auto;
 }
 .nav-list{
 	width:100%;
 	height:70px;
-	background-color:#EC715F
 	float:right;
 }
 .nav-list-item{
